# bullet3

./: meson.build
src/: meson.build
src/BulletCollision/: meson.build
src/BulletDynamics/: meson.build
src/BulletDynamics/Featherstone/: btMultiBody.cpp
src/LinearMath/: meson.build
